more mobile fixes (xxxs)
- fix repo select flow
- fix aha sidebar
- fix popover being cut off

--- a/client/assets/styles/scss/components/aha-popover.scss
+++ b/client/assets/styles/scss/components/aha-popover.scss
@@ -4,6 +4,10 @@
   top: 66px;
   width: 450px;
 
+  @include media(xxs) {
+    max-width: calc(100vw - 100px);
+  }
+
   .popover-content {
     @extend %padding-sm;
   }
