--- a/client/assets/styles/scss/views/views-toolbar.scss
+++ b/client/assets/styles/scss/views/views-toolbar.scss
@@ -135,6 +135,7 @@
     color: rgba($orange,.75);
     cursor: default;
     font-family: $sans-serif;
+    padding: 0;
 
     .icons-alert {
       height: 12px;
